Src/RpcInterface/XilEnvRpc.h

// Connect
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ConnectTo(const char* NetAddr);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ConnectToInstance(const char* NetAddr, const char *InstanceName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_DisconnectFrom(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_DisconnectAndClose(int SetErrorLevelFlag, int ErrorLevel);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_IsConnectedTo(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetVersion(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetAPIVersion(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetAPIAlternativeVersion(void);
CFUNC SCRPCDLL_API char * __STDCALL__ XilEnv_GetAPIModulePath(void);
// Other
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_CreateFileWithContent (const char *Filename,
                                                             const char *Content);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetEnvironVar (const char *EnvironVar);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetEnvironVar (const char *EnvironVar, const char *EnvironValue);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ChangeSettings (const char *SettingName, const char *ValueString);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_TextOut (const char *TextOut);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ErrorTextOut (int ErrLevel, const char *TextOut);
// Scheduler
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_StopScheduler(void);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_ContinueScheduler(void);
CFUNC SCRPCDLL_API int  __STDCALL__ XilEnv_IsSchedulerRunning(void);
CFUNC SCRPCDLL_API int  __STDCALL__ XilEnv_StartProcess(const char* name);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartProcessAndLoadSvl(const char* ProcessName, const char* SvlName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartProcessEx(const char* ProcessName,
                                                     int Prio, 
                                                     int Cycle, 
                                                     short Delay, 
                                                     int Timeout, 
                                                     const char *SVLFile, 
                                                     const char *BBPrefix,
                                                     int UseRangeControl,  // If 0, than ignore all following "RangeControl*" parameter
                                                     int RangeControlBeforeActiveFlags,
                                                     int RangeControlBehindActiveFlags,
                                                     int RangeControlStopSchedFlag,
                                                     int RangeControlOutput,
                                                     int RangeErrorCounterFlag,
                                                     const char *RangeErrorCounter,
                                                     int RangeControlVarFlag,
                                                     const char *RangeControl,
                                                     int RangeControlPhysFlag,
                                                     int RangeControlLimitValues);
CFUNC SCRPCDLL_API int  __STDCALL__ XilEnv_StopProcess(const char* name);
CFUNC SCRPCDLL_API char* __STDCALL__ XilEnv_GetNextProcess (int flag, char* filter);
CFUNC SCRPCDLL_API int  __STDCALL__ XilEnv_GetProcessState(const char* name);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_DoNextCycles (int Cycles);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_DoNextCyclesAndWait (int Cycles);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AddBeforeProcessEquationFromFile(int Nr, const char *ProcName, const char *EquFile);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_DelBehindProcessEquations(int Nr, const char *ProcName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_WaitUntil (const char *Equation, int Cycles);
// Internal Processes
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartScript(const char* scrfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopScript(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartRecorder(const char* cfgfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopRecorder(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_RecorderAddComment(const char* Comment);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartPlayer(const char* cfgfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopPlayer(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartEquations(const char* equfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopEquations(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StartGenerator(const char* genfile);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_StopGenerator(void);
// GUI
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_LoadDesktop(const char* file);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SaveDesktop(const char* file);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ClearDesktop(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_CreateDialog(const char* DialogName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_AddDialogItem(const char* Description, const char* VariName);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_ShowDialog(void);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_IsDialogClosed(void);
// A2LLink
typedef struct {
    void *Data;
} XILENV_LINK_DATA;
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetLinkArrayValueDimension(XILENV_LINK_DATA *Data, int ArrayNo, int DimNo);
CFUNC SCRPCDLL_API double __STDCALL__ XilEnv_GetLinkArrayValueDataDouble(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkArrayValueDataDouble(XILENV_LINK_DATA *Data, int ArrayNo, int Number, double Value);
CFUNC SCRPCDLL_API int64_t __STDCALL__ XilEnv_GetLinkArrayValueDataInt(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkArrayValueDataInt(XILENV_LINK_DATA *Data, int ArrayNo, int Number, int64_t Value);
CFUNC SCRPCDLL_API uint64_t __STDCALL__ XilEnv_GetLinkArrayValueDataUint(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkArrayValueDataUint(XILENV_LINK_DATA *Data, int ArrayNo, int Number, uint64_t Value);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetLinkArrayValueDataString(XILENV_LINK_DATA *Data, int ArrayNo, int Number, char *ret_Value, int MaxLen);
CFUNC SCRPCDLL_API const char* __STDCALL__ XilEnv_GetLinkArrayValueDataStringPtr(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_SetLinkArrayValueDataString(XILENV_LINK_DATA *Data, int ArrayNo, int Number, const char *Value);
CFUNC SCRPCDLL_API int __STDCALL__ XilEnv_GetLinkArrayValueUnit(XILENV_LINK_DATA *Data, int ArrayNo, int Number, char *ret_Value, int MaxLen);
CFUNC SCRPCDLL_API const char* __STDCALL__ XilEnv_GetLinkArrayValueUnitPtr(XILENV_LINK_DATA *Data, int ArrayNo, int Number);
CFUNC SCRPCDLL_API void __STDCALL__ XilEnv_PrintLinkData(XILENV_LINK_DATA *par_Data);