Src/RpcInterface/XilEnvRpc.py


		self.__Dll.XilEnv_GetLinkArrayValueDimension.restype = ct.c_int
		self.__Dll.XilEnv_GetLinkArrayValueDimension.argtypes = [ct.c_void_p, ct.c_int, ct.c_int]

		self.__Dll.XilEnv_GetLinkArrayValueDataDouble.restype = ct.c_double
		self.__Dll.XilEnv_GetLinkArrayValueDataDouble.argtypes = [ct.c_void_p, ct.c_int, ct.c_int]

		self.__Dll.XilEnv_SetLinkArrayValueDataDouble.restype = ct.c_int
		self.__Dll.XilEnv_SetLinkArrayValueDataDouble.argtypes = [ct.c_void_p, ct.c_int, ct.c_int, ct.c_double]

		self.__Dll.XilEnv_GetLinkArrayValueDataInt.restype = ct.c_int64
		self.__Dll.XilEnv_GetLinkArrayValueDataInt.argtypes = [ct.c_void_p, ct.c_int, ct.c_int]

		self.__Dll.XilEnv_SetLinkArrayValueDataInt.restype = ct.c_int
		self.__Dll.XilEnv_SetLinkArrayValueDataInt.argtypes = [ct.c_void_p, ct.c_int, ct.c_int, ct.c_int64]

		self.__Dll.XilEnv_GetLinkArrayValueDataUint.restype = ct.c_uint64
		self.__Dll.XilEnv_GetLinkArrayValueDataUint.argtypes = [ct.c_void_p, ct.c_int, ct.c_int]

		self.__Dll.XilEnv_SetLinkArrayValueDataUint.restype = ct.c_int
		self.__Dll.XilEnv_SetLinkArrayValueDataUint.argtypes = [ct.c_void_p, ct.c_int, ct.c_int, ct.c_uint64]

		self.__Dll.XilEnv_GetLinkArrayValueDataString.restype = ct.c_int
		self.__Dll.XilEnv_GetLinkArrayValueDataString.argtypes = [ct.c_void_p, ct.c_int, ct.c_int, ct.POINTER(ct.c_char), ct.c_int]

		self.__Dll.XilEnv_GetLinkArrayValueDataStringPtr.restype = ct.c_char_p
		self.__Dll.XilEnv_GetLinkArrayValueDataStringPtr.argtypes = [ct.c_void_p, ct.c_int, ct.c_int]
	
		self.__Dll.XilEnv_SetLinkArrayValueDataString.restype = ct.c_int
		self.__Dll.XilEnv_SetLinkArrayValueDataString.argtypes = [ct.c_void_p, ct.c_int, ct.c_int, ct.c_char_p]

		self.__Dll.XilEnv_GetLinkArrayValueUnit.restype = ct.c_int
		self.__Dll.XilEnv_GetLinkArrayValueUnit.argtypes = [ct.c_void_p, ct.c_int, ct.c_int, ct.POINTER(ct.c_char), ct.c_int]

		self.__Dll.XilEnv_GetLinkArrayValueUnitPtr.restype = ct.c_char_p
		self.__Dll.XilEnv_GetLinkArrayValueUnitPtr.argtypes = [ct.c_void_p, ct.c_int, ct.c_int]
	
		self.__Dll.XilEnv_PrintLinkData.restype = None
		self.__Dll.XilEnv_PrintLinkData.argtypes = [ct.c_void_p]

# All methods definitions starts here:

	def c_str(self, string):
		return ct.c_char_p(string.encode('utf-8'))

	def str_c(self, c_string):
		if (c_string == None) :
			return ""
		else :
			return c_string.decode("utf-8")

# Connect 

# The following method can be called without a successful connection to softcar
	def GetAPIVersion(self): 
		return self.__Dll.XilEnv_GetAPIVersion()

	def GetAPIAlternativeVersion(self): 
		return self.__Dll.XilEnv_GetAPIAlternativeVersion()

	def GetAPIModulePath(self):
		return self.__Dll.XilEnv_GetAPIModulePath()

	def ConnectTo(self, Address):
		if (self.__SuccessfulConnected == 0):
			Ret = self.__Dll.XilEnv_ConnectTo(self.c_str(Address))
			if (Ret == 0):
				self.__SuccessfulConnected = 1
		else:
			Ret = -1
		return Ret

	def ConnectToInstance(self, Address, Instance):
		if (self.__SuccessfulConnected == 0):
			Ret = self.__Dll.XilEnv_ConnectToInstance(self.c_str(Address), self.c_str(Instance))
			if (Ret == 0):
				self.__SuccessfulConnected = 1
		else:
			Ret = -1
		return Ret

	def IsConnectedTo(self):
		return self.__Dll.XilEnv_IsConnectedTo()

# To call all following method you need a successful connection to softcar (call ConnectToSoftcar before)
	def DisconnectFrom(self):
		if (self.__SuccessfulConnected == 1):
			Ret = self.__Dll.XilEnv_DisconnectFrom()
			if (Ret == 0):
				self.__SuccessfulConnected = 0
		else:
			Ret = -1
		return Ret

	def DisconnectAndClose(self, SetErrorLevelFlag, ErrorLevel):
		if (self.__SuccessfulConnected == 1):
			Ret = self.__Dll.XilEnv_DisconnectAndClose(SetErrorLevelFlag, ErrorLevel)
			if (Ret == 0):
				self.__SuccessfulConnected = 0
		else:
			Ret = -1
		return Ret

	def GetVersion(self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_GetVersion()
		else:
			return -1


# Other 
	def CreateFileWithContent (self, Filename, Content):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_CreateFileWithContent(self.c_str(Filename), self.c_str(Content))
		else:
			return -1

	def GetEnvironVar (self, EnvironVar):
		if (self.__SuccessfulConnected == 1):
			return self.str_c(self.__Dll.XilEnv_GetEnvironVar(self.c_str(EnvironVar)))
		else:
			return ""

	def SetEnvironVar (self, EnvironVar, EnvironValue):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_SetEnvironVar(self.c_str(EnvironVar), self.c_str(EnvironValue))
		else:
			return -1

	def ChangeSettings (self, SettingName, SettingValue):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_ChangeSettings(self.c_str(SettingName), self.c_str(SettingValue))
		else:
			return -1

	def TextOut (self, TextOut):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_TextOut(self.c_str(TextOut))
		else:
			return -1

	def ErrorTextOut (self, ErrLevel, TextOut):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_ErrorTextOut(ErrLevel, self.c_str(TextOut))
		else:
			return -1

# Scheduler
	def StopScheduler (self):
		if (self.__SuccessfulConnected == 1):
			self.__Dll.XilEnv_StopScheduler()

	def ContinueScheduler (self):
		if (self.__SuccessfulConnected == 1):
			self.__Dll.XilEnv_ContinueScheduler()

	def SchedulerRunning (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_IsSchedulerRunning()
		else:
			return -1

	def StartProcess (self, Name):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartProcess(self.c_str(Name))
		else:
			return -1

	def StartProcessAndLoadSvl (self, ProcessName, SvlName):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartProcessAndLoadSvl(self.c_str(ProcessName), self.c_str(SvlName))
		else:
			return -1

	def StartProcessEx (self, ProcessName, Prio, Cycle, Delay, Timeout, SVLFile, BBPrefix, UseRangeControl, RangeControlBeforeActiveFlags, RangeControlBehindActiveFlags, RangeControlStopSchedFlag, RangeControlOutput, RangeErrorCounterFlag, RangeErrorCounter, RangeControlVarFlag, RangeControl, RangeControlPhysFlag, RangeControlLimitValues):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartProcessEx(self.c_str(ProcessName), Prio, Cycle, Delay, Timeout, self.c_str(SVLFile), self.c_str(BBPrefix), UseRangeControl, RangeControlBeforeActiveFlags, RangeControlBehindActiveFlags, RangeControlStopSchedFlag, RangeControlOutput, RangeErrorCounterFlag, self.c_str(RangeErrorCounter), RangeControlVarFlag, self.c_str(RangeControl), RangeControlPhysFlag, RangeControlLimitValues)
		else:
			return -1

	def StartProcessEx2 (self, ProcessName, Prio, Cycle, Delay, Timeout, SVLFile, A2LFile, A2LFlags, BBPrefix, UseRangeControl, RangeControlBeforeActiveFlags, RangeControlBehindActiveFlags, RangeControlStopSchedFlag, RangeControlOutput, RangeErrorCounterFlag, RangeErrorCounter, RangeControlVarFlag, RangeControl, RangeControlPhysFlag, RangeControlLimitValues):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartProcessEx(self.c_str(ProcessName), Prio, Cycle, Delay, Timeout, self.c_str(SVLFile), self.c_str(A2LFile), A2LFlags, self.c_str(BBPrefix), UseRangeControl, RangeControlBeforeActiveFlags, RangeControlBehindActiveFlags, RangeControlStopSchedFlag, RangeControlOutput, RangeErrorCounterFlag, self.c_str(RangeErrorCounter), RangeControlVarFlag, self.c_str(RangeControl), RangeControlPhysFlag, RangeControlLimitValues)
		else:
			return -1

	def StopProcess (self, Name):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StopProcess(self.c_str(Name))
		else:
			return -1

	def GetNextProcess (self, Flag, Filter):
		if (self.__SuccessfulConnected == 1):
			return self.str_c(self.__Dll.XilEnv_GetNextProcess(Flag, self.c_str(Filter)))
		else:
			return -1

	def GetProcessState (self, Name):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_GetProcessState(self.c_str(Name))
		else:
			return -1

	def DoNextCycles (self, Cycles):
		if (self.__SuccessfulConnected == 1):
			self.__Dll.XilEnv_DoNextCycles(Cycles)

	def DoNextCyclesAndWait (self, Cycles):
		if (self.__SuccessfulConnected == 1):
			self.__Dll.XilEnv_DoNextCyclesAndWait(Cycles)


	def AddBeforeProcessEquationFromFile (self, Nr, ProcName, EquFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_AddBeforeProcessEquationFromFile(Nr, self.c_str(ProcName), self.c_str(EquFile))
		else:
			return -1

	def AddBehindProcessEquationFromFile (self, Nr, ProcName, EquFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_AddBeforeProcessEquationFromFile(Nr, self.c_str(ProcName), self.c_str(EquFile))
		else:
			return -1

	def DelBeforeProcessEquations (self, Nr, ProcName):
		if (self.__SuccessfulConnected == 1):
			self.__Dll.XilEnv_AddBeforeProcessEquationFromFile(Nr, self.c_str(ProcName))

	def DelBehindProcessEquations (self, Nr, ProcName):
		if (self.__SuccessfulConnected == 1):
			self.__Dll.XilEnv_DelBehindProcessEquations(Nr, self.c_str(ProcName))

	def WaitUntil (self, Equation, Cycles):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_WaitUntil(self.c_str(Equation), Cycles)
		else:
			return -1

# internal processes
	def StartScript (self, ScriptFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartScript(self.c_str(ScriptFile))
		else:
			return -1

	def StopScript (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StopScript()
		else:
			return -1

	def StartRecorder (self, CfgFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartRecorder(self.c_str(CfgFile))
		else:
			return -1

	def RecorderAddComment (self, Comment):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_RecorderAddComment(self.c_str(Comment))
		else:
			return -1

	def StopRecorder (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StopRecorder()
		else:
			return -1

	def StartPlayer (self, CfgFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartPlayer(self.c_str(CfgFile))
		else:
			return -1

	def StopPlayer (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StopPlayer()
		else:
			return -1

	def StartEquations (self, EquFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartEquations(self.c_str(EquFile))
		else:
			return -1

	def StopEquations (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StopEquations()
		else:
			return -1

	def StartGenerator (self, GenFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StartGenerator(self.c_str(GenFile))
		else:
			return -1

	def StopGenerator (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_StopGenerator()
		else:
			return -1


# GUI
	def LoadDesktop (self, DskFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_LoadDesktop(self.c_str(DskFile))
		else:
			return -1

	def SaveDesktop (self, DskFile):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_SaveDesktop(self.c_str(DskFile))
		else:
			return -1

	def ClearDesktop (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_ClearDesktop()
		else:
			return -1

	def CreateDialog (self, DialogName):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_CreateDialog(self.c_str(DialogName))
		else:
			return -1

	def AddDialogItem (self, Description, VariName):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_AddDialogItem(self.c_str(Description), self.c_str(VariName))
		else:
			return -1

	def ShowDialog (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_ShowDialog()
		else:
			return -1

	def IsDialogClosed (self):
		if (self.__SuccessfulConnected == 1):
			return self.__Dll.XilEnv_IsDialogClosed()
		else:
			return -1
